...
      !props.showHidePasswordButton &&
      props.value !== (undefined || "") &&
      props.defaultValue !== (undefined || "")
    ) {
      return (
        <TouchableOpacity
          testID="delete-button"
          activeOpacity={0.8}
          style={styles.delete_button_container}
          onPress={props.onDelete}
          hitSlop={{ top: 5, bottom: 5, left: 5, right: 5 }}
        >
          <Ionicons
...
