appId: <com.example.gtptest>
---
- tapOn: "Button"
- tapOn: "Button custom"
- tapOn: "Button outline"
